@@ -1,3 +1,7 @@
+2010-04-21 01:22-MDT Jonathan Gillaspie <jonathan.gillaspie@testplant.com>
+
+	* WinNSOpenPanel.m: Use wcscpy to copy unichar strings.
+
 2010-04-21 Eric Wasylishen <ewasylishen@gmail.com>
 
 	* WinNSBrowserHeader.m: Don't draw a background for browser headers.
